Add dynamic background image to CalculatorScene with responsible scaling and wrapped layout in StackPane for proper layering of background and UI.
- Added L2_map_C4.jpg to /resources/Images as the background asset.
- Updated CalculatorScene to use ImageView with bindings to scene size.
- Updated MainFX with min/max windows size constraints